--- a/template/common/entry.html
+++ b/template/common/entry.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="entry">
     <div class="left-section">
-        <div class="left-text">承瀚海之辽阔</div>
+        <div id="floatingText" class="left-text float-up">承瀚海之辽阔</div>
     </div>
 
     <div class="right-section">
