--- a/template/reader/book_info.html
+++ b/template/reader/book_info.html
@@ -8,7 +8,7 @@
             <div class="book-info-title">{{ book.title }}</div>
             <div class="book-info-text">作者：{{ book.author }}</div>
             <div class="book-info-text">出版社：{{ book.publisher }}</div>
-            <div class="book-info-text">ISBN：{{ book.isbn }}</div>
+            <div class="book-info-text">ISBN: {{ book.isbn }}</div>
             <div class="book-info-text">出版日期：{{ book.date }}</div>
             <div class="book-info-text">册数：{{ book.number }}</div>
         </div>
