--- a/template/reader/with_nav.html
+++ b/template/reader/with_nav.html
@@ -37,7 +37,13 @@
                 预约记录
             </a>
 
-            <a href="#">用户中心</a>
+            <a href={% url 'reader_user_space' %}
+                {% if request.path == '/reader/user_space' %}
+                    class="current"
+                {% endif %}>
+                用户中心  
+            </a>
+
             <a href="{% url 'entry' %}">退出</a>
         </div>
     </div>
