--- a/template/reader/borrow_list.html
+++ b/template/reader/borrow_list.html
@@ -1,5 +1,13 @@
 {% extends "reader/with_nav.html" %}
 
+<head>
+    <title>Bootstrap</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
 {% load app_extras %}
 
 {% block main_content %}
@@ -27,21 +35,52 @@
                             {% with days=record.due_time|calculate_days_difference:record.start_time %}
                             {% if days < 59 and not overtime%}
                                 <div>
-                                <p>续借天数</p>
-                                    <ul>
+
+                                    <form method="POST" action="{% url 'reader_renewal' %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="borrow-id" value="{{ record.id }}">
+                                        <label for="renewal-form"></label>
+                                        <select id="renewal-form" name="day">
+                                            <option value="">--选择续借天数--</option>
+                                            
+                                            {% with result=59|subtract:days %}
+                                            {% with result|enum as range%}
+                                            
+                                                {% for i in range %}      
+                                                
+                                                    <option name="day" value="{{ i }}" >{{ i }}</option>
+                                                    
+                                                {% endfor %}
+                                                
+                                    
+                                            {% endwith %}
+                                            {% endwith %}
+                                            
+                                        </select>
+                                        <button type="submit">提交</button>
+                                    </form>
+                                    
+                                    
+                                
+                                
+                                    {% comment %} <ul>
                                     {% with result=59|subtract:days %}
                                         {% with result|enum as range%}
-                                            {% for i in range %}
+                                        
+                                            {% for i in range %}      
+                                            
                                                 <form id="renewal-form{{ i }}">
                                                     {% csrf_token %}
                                                     <input type="hidden" name="day" value="{{ i }}">
                                                     <input type="hidden" name="borrow-id" value="{{ record.id }}">
                                                     <button class="renewal-btn" i-id="{{ i }}">{{ i }}</button>
                                                 </form>
+                                                
                                             {% endfor %}
+                            
                                         {% endwith %}
                                     {% endwith %}
-                                    </ul>
+                                    </ul> {% endcomment %}
                                 </div>
                             {% endif %}
                             {% endwith %}
